namespaces/apps/website/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website
  namespace: apps
spec:
  parentRefs:
    - name: public-gateway
      namespace: networking

  hostnames:
    - www.toando.de

  rules:
    - backendRefs:
        - name: website
          port: 3000
